Closed
Bug 1604435
Opened 6 years ago
Closed 6 years ago
Eager Evaluation creates variable as the user type
Categories
(DevTools :: Console, defect, P2)
DevTools
Console
Tracking
(firefox73 fixed)
RESOLVED
FIXED
Firefox 73
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: nchevobbe, Assigned: bhackett1024)
References
Details
Attachments
(1 file)
Steps to reproduce
- Make sure
devtools.webconsole.input.eagerEvaluationis set to true - Open the console
- Slowly, type
var myTestVariable = 1; my
Expected results
The autocomplete popup isn't displayed (or after Bug 1604411 lands, we only have a completion text for myTestVariable).
Actual results
There are multiple values in the autocomplete, at most one per typed letter, i.e.
my
myT
myTe
myTes
myTest
myTestV
myTestVa
myTestVar
myTestVari
myTestVaria
myTestVariab
myTestVariabl
myTestVariable
This seems to indicate that the eager evaluation is actually declaring variables, which I don't think is something we want.
| Assignee | ||
Comment 1•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → bhackett1024
Status: NEW → ASSIGNED
Pushed by bhackett@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a1266665b89b
Include effectful offsets preceding the script's main offset, r=jimb.
Comment 3•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 73
You need to log in
before you can comment on or make changes to this bug.
Description
•