Bug 1604435 - Include effectful offsets preceding the script's main offset, r=jimb.

Differential Revision: https://phabricator.services.mozilla.com/D57975

--HG--
extra : moz-landing-system : lando