js/src/jit-test/tests/debug/Script-getEffectfulOffsets.js
@@ -20,13 +20,14 @@ ${code}
   assertEq(numEffectfulOperations, expected);
 }
 
-test("a.f = 0", 1);
-test("a.f++", 1);
-test("return a.f", 0);
-test("a[b] = 0", 1);
-test("a[b]++", 1);
-test("return a[b]", 0);
-test("a = 0", 0);
-test("d = 0", 1);
-test("with (a) { b = 0; }", 1);
-test("let o = {}; ({x: o.x} = { x: 10 })", 1);
+test("a.f = 0", 2);
+test("a.f++", 2);
+test("return a.f", 1);
+test("a[b] = 0", 2);
+test("a[b]++", 2);
+test("return a[b]", 1);
+test("a = 0", 1);
+test("d = 0", 2);
+test("with (a) { b = 0; }", 4);
+test("let o = {}; ({x: o.x} = { x: 10 })", 2);
+test("var x", 1);
